<resources>
    <string name="app_name">Главный экран</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Рецепты</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">Завтраки</string>
    <string name="title_ovsyanka">Овсянка с молоком</string>
    <string name="title_pancakes">Яичные рулетики</string>
    <string name="title_pirog">Ягодный пирог</string>
    <string name="title_mex_potato">Картофель в духовке, запеченный по-мексиканскиг</string>
    <string name="title_chicken">Куриные ножки</string>
    <string name="title_noodles">Макаронная запеканка с сыром и ветчиной в духовке</string>
    <string name="recipe_ovsyanka">Вам понадобится:\n300г. овсяных хлопьев;\n
        250 мл. жирного молока;\n
    10 г. сахара;\n
    щепотку соли и небольшой кусочек сливочного масла;\n\n
1)Молоко доводится до кипения, после чего в него сразу же закладываются все приготовленные хлопья, а также соль и сахар.\n
2)Ингредиенты тщательно перемешиваются и варятся 3-10 минут. Точное время приготовления будет зависеть от качества хлопьев.
        Нужно следить за процессом их набухания и постоянно помешивать массу, чтобы избежать подгорания.\n
3)Огонь должен быть минимальным, чтобы блюдо не бурлило, а томилось.\n
4)После завершения варки в угощение добавляется сливочное масло.\n\n
    </string>
    <string name="recipe_pancakes">Вам понадобится:\nЯйца куриные 4 шт.\nМайонез 150 г\nПлавленый сырок 2 шт.\nВетчина 150 г\nЧеснок\nЗелень\n\
1) Яйца смешайте с майонезом, посолите.\n
        2) На разогретую смазанную сковороду вылейте смесь.\n3) Наполнитель: натрите плавленый сыр.\n4) Нарежьте кубиками ветчину.\n5) Измельчите чеснок.\n6) Добавьте соус и все перемешайте.\n
        7) На яичный блин выложите начинку и аккуратно заверните, подогнув края.\n\n

    </string>
    <string name="recipe_pirog">Вам понадобится:\n1 стакан любого варенья\n1 стакан кефира, простокваши или ряженки\n
        0,5 ст. сахара\n2,5 ст.муки\n
        1 яйцо\n
        1 ч.л. соды\n\n

        1) Выложить варенье в блюдо и смешать с содой. Оставить на 5 минут\n2) Смажать форму маслом идобавить остальные ингридиенты.\n3)Перемешать и выложить в духовку, разогретую до 180 градусов.\n
        4) Оставить на 50 минут, достать, посыпать сахарной пудрой.\n\n

    </string>

    <string name="recipe_noodles">Вам понадобится:\n\nмакароны	200 г\n
ветчина	200 г\n
сыр	100 г\n
молоко	250 мл\n
вода	250 мл\n
специи	по вкусу\n
масло растительное (для смазки формы)\n
соль	по вкусу\n

        1) Подготовить высокую форму, смазать маслом, положить макароны, прикрыть слоем нарезанной на кусочки ветчиной, приправить специями, поперчить.\n
        2)Смешать молоко с подсоленной водой, залить в форму, присыпать сырной стружкой.\n
        3)Форму закрыть фольгой, выпекать макаронную запеканку с сыром и ветчиной полчаса на среднем огне, осторожно удалить фольгу, готовить еще четверть часа.\n\n
    </string>
    <string name="recipe_mex_potato">Вам понадобится:\n\nкартофель	1 кг\n
чеснок	2-3 зубчика\n
кориандр	5-8 зерен\n
перец красный молотый	по вкусу\n
паприка	по вкусу\n
соль	по вкусу\n
масло растительное\n
лук зеленый\n

        1)Клубни картофеля вымыть и отварить вместе с кожурой.\n
        2) Продукт остудить, очистить, нарезать ломтиками.\n
        3) Добавить соль, молотый острый красный перец, чеснок, паприку, растительное масло и семена кориандра, перемешать.\n
        4)Выложить смесь на противень, печь при температуре 180 градусов в течение 20 – 25 минут до получения золотистой корочки.\n\n
    </string>
    <string name="recipe_chicken">Вам понадобится:\n\nкуриные ножки	8 шт.\n
мед жидкий	100 мл\n
горчица дижонская	4 ст.л.\n
уксус винный белый (лимонный сок)	4 ст.л.\n
масло подсолнечное	2 ст.л.\n
чеснок	2 зубчика\n
соль	по вкусу\n
соус соевый	по вкусу\n
перец черный свежемолотый	по вкусу\n
петрушка	по вкусу\n
кинза\n

        1) В ножках сделать проколы острием ножа, сложить в глубокую миску.\n
        2) Смешать жидкий мед, дижонскую горчицу, белый винный уксус, чеснок, подсолнечное масло, соль,
        соевый соус, свежемолотый черный перец, промазать курицу, закрыть фольгой, поставить мариноваться в холодильник на ночь.\n
        3)Прогреть духовку до 220 градусов, переложить ножки в форму, поместить ее на среднюю полку духовки.\n
        4) Запекать куриные ножки в горчично–медовом маринаде около 40 минут, поливая остатками маринада.\n
        5) Готовность блюда проверить ножом. Если выделится прозрачная жидкость, то ножки можно доставать и подавать к столу, присыпав порубленной зеленью.\n\n
    </string>
    <string name="title_activity_scrolling__breakfast">Завтраки</string>
    <string name="title_activity_scrolling__lunch">Обеды</string>
    <string name="title_activity_scrolling__dinner">Ужины</string>
</resources>
