<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LunchActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_mex_potato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_mex_potato"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                app:srcCompat="@drawable/mexpotato" />

            <TextView
                android:id="@+id/recipe_mex_potato"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_mex_potato" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#7b7b7b" />

            <TextView
                android:id="@+id/text_pancakes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_chicken"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="292dp"
                app:srcCompat="@drawable/chicken" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_chicken" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="#7b7b7b" />

            <TextView
                android:id="@+id/text_pirog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_noodles"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                app:srcCompat="@drawable/noodles" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_noodles" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>