<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BreakfastActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_ovsyanka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/title_ovsyanka" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="212dp"
                app:srcCompat="@drawable/ovsyanka" />

            <TextView
                android:id="@+id/recipe_ovsyanka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_ovsyanka" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7b7b7b"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" />

            <TextView
                android:id="@+id/text_pancakes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/title_pancakes" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="292dp"
                app:srcCompat="@drawable/puncakes" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_pancakes" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#7b7b7b"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp" />

            <TextView
                android:id="@+id/text_pirog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="48sp"
                android:text="@string/title_pirog" />

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                app:srcCompat="@drawable/pirog" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_pirog" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>